# DeviceFingerprinting

./: .codeqlignore  .devskim.json  .env.template  .gitignore  .quantum_token  .vault_integrity  ADDITIONAL_LIBRARY_OPPORTUNITIES.md  ADVANCED_FEATURES.md  AI_COMMENT_CLEANUP_REPORT.md  AI_COMMENT_CLEANUP_SUMMARY.md  AJIBI_UNIQUENESS_IMPLEMENTATION.md  ANTI_REPLAY_PROTECTION_SUMMARY.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CLUSTERFUZZLITE_SETUP.md  CODE_OF_CONDUCT.md  CODE_SECURITY_ASSESSMENT.md  CODE_VALIDATION_REPORT.md  COMMERCIAL_STANDARDS_SUMMARY.md  COMPLETE_INNOVATION_ANALYSIS.md  CONFIDENCE_ASSESSMENT.md  CONFIDENCE_SCORE_GUIDE.md  CONTRIBUTING.md  CREATE_GITHUB_REPOS.md  CorrectPQC.py  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEVICEFINGERPRINT_REBRANDING_SUMMARY.md  DEVICE_FINGERPRINTING_EXTRACTION_SUMMARY.md  DEVICE_FINGERPRINTING_MARKET_ANALYSIS.md  DIY_PATENT_FILING_GUIDE.md  DOCUMENTATION_INDEX.md  DUAL_MODE_ARCHITECTURE.md  EMOJI_REMOVAL_SUMMARY.md  FINAL_SECURITY_ASSESSMENT.md  FUZZING_DEPLOYMENT_SUMMARY.md  GITHUB_PAGES_DELIVERY.md  GITHUB_PUBLICATION_SUCCESS.md  GITHUB_RELEASE_NOTES.md  GITHUB_REPOSITORY_NAMES.md  (+132 more)
.clusterfuzzlite/: Dockerfile  README.md  build.sh  project.yaml
.github/codeql/: codeql-config.yml
.github/workflows/: apisec-scan.yml  ci.yml  clusterfuzzlite.yml  codeql.yml  devskim.yml  fuzzing.yml  security-scan.yml
conda-recipe/: meta.yaml
device_fingerprinting/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  PQC_INTEGRATION_COMPLETE.md  PYPI_PUBLISHING_GUIDE.md  README.md  __init__.py  analytics_dashboard.py  backends.py  cloud_features.py  crypto.py  default_backends.py  device_fingerprinting.py  device_fingerprinting_complex_backup.py  forensic_security.py  hsm_backends.py  hybrid_pqc.py  ml_features.py  pyproject.toml  requirements.txt  rust_bridge.py  secure_storage.py  security.py  setup.py
device_fingerprinting/.github/workflows/: ci.yml
device_fingerprinting/rust/: Cargo.toml
device_fingerprinting/rust/include/: fingerprint_engine.h
device_fingerprinting/rust/src/: lib.rs
device_fingerprinting/src/device_fingerprinting/: analytics_dashboard.py  cloud_features.py  default_backends.py  device_fingerprinting_new.py  exceptions.py  forensic_security.py  hsm_backends.py  hybrid_pqc.py  ml_features.py  rust_bridge.py  secure_storage.py  security.py  simple_fingerprint.py  version.py
devicefingerprint/: .gitignore  ADVANCED_INNOVATIONS.md  CHANGELOG.md  CONDA_FORGE_EXPLAINED.md  CONDA_FORGE_FINAL_STEPS.md  CONDA_FORGE_SUBMISSION.md  DEPLOYMENT_CHECKLIST.md  DISTRIBUTION_ADVANTAGES.md  DISTRIBUTION_SUMMARY.md  DOCKER_HUB_SUBMISSION.md  DOWNLOAD_TRACKING_SYSTEM.md  Dockerfile  GITHUB_PACKAGES_SETUP.md  IMMEDIATE_UPLOAD_GUIDE.md  INSTALLATION_GUIDE.md  NPM_SUBMISSION.md  PLATFORM_ACCEPTANCE_ANALYSIS.md  PRODUCTION_IMPLEMENTATION.md  PYPI_DESCRIPTION.md  QUICK_INSTALL_GUIDE.md  REALISTIC_IMPLEMENTATION.md  RELEASE_NOTES.md  SECURITY_THEATER_ANALYSIS.md  UPLOAD_ACTION_PLAN.md  __init__.py  advanced_constellation.py  ajibi_enterprise_orchestra.py  ajibi_vault_resonance.py  behavioral_fingerprinting.py  demo.py  devicefingerprint.py  enterprise_integration.py  hardware_monitoring.py  machine_learning.py  performance_enhancements.py  production_config.py  realistic_fingerprint.py  security_monitoring.py  simple_test.py  tpm_enhanced.py
devicefingerprint/.github/workflows/: download_tracking.yml  publish-github-packages.yml
devicefingerprint/chocolatey/: device-fingerprinting-pro.nuspec
devicefingerprint/chocolatey/tools/: chocolateyinstall.ps1
devicefingerprint/distribution/: AWS_CODEARTIFACT.md  AZURE_ARTIFACTS.md  GITHUB_PACKAGES.md  GITLAB_REGISTRY.md
devicefingerprint/examples/: __init__.py  advanced_fingerprinting_demo.py  token_binding_example.py
devicefingerprint/homebrew/: device-fingerprinting-pro.rb
devicefingerprint/npm/: index.js  package.json
devicefingerprint/snap/: snapcraft.yaml
devicefingerprint/tests/: test_device_fingerprinting.py
devicefingerprint/tracking/: README.md  TRACKING_STATUS.md  download_report_20250906_060151.txt  download_report_20250906_060306.txt  download_report_20250906_072330.txt  download_stats.csv  download_tracker.py  quick_stats.py  setup_tracking.py  tracking_config.json
docs/: DOCUMENTATION_SUMMARY.md  README.md  _config.yml  index.md
docs/api/: reference.md
docs/guides/: architecture.md  examples.md  faq.md  getting-started.md  installation.md  security-architecture.md  troubleshooting.md
dynamic/github-code-scanning/: codeql
examples/: advanced_example.py  ajibi_vault_demo.py  basic_example.py  dual_mode_enforcement.py  enterprise_examples.py  secure_fallback_example.py  token_binding_example.py  tpm_example.py
fuzz/: README.md  __init__.py  fuzz_crypto.py  fuzz_fingerprint.py  fuzz_storage.py  test_locally.py
ossfuzz/: Dockerfile  build.sh  project.yaml
pqc_rust_src/: Cargo.toml  build_log.txt  pyproject.toml
pqc_rust_src/src/: crypto.rs  lib.rs  secure_memory.rs
quantumvault/: __init__.py  cli.py  version.py
quantumvault_password_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rust/: Cargo.toml  build.rs
src/: codeql_dummy.c
src/device_fingerprinting/: __init__.py  analytics_dashboard.py  backends.py  cloud_features.py  crypto.py  default_backends.py  device_fingerprinting.py  exceptions.py  forensic_security.py  hsm_backends.py  hybrid_pqc.py  ml_features.py  production_fingerprint.py  quantum_crypto.py  quantum_resistant_backends.py  rust_bridge.py  secure_storage.py  security.py  tpm_hardware.py  version.py
tests/: __init__.py  conftest.py  test_crypto.py  test_device_fingerprinting.py  test_ml_features.py  test_pqc_integration.py  test_pqc_linux.py  test_production_fingerprint.py  test_pytest.py  test_secure_storage.py  test_security.py
